2008-09-04  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-time-selector.c
	Define gettext auxiliar macro N_
	(_create_minutes_model)
	(_create_hours_model)
	(_create_ampm_model): use of strftime in order to fill the model
	* src/hildon-date-selector.c
	(hildon_date_selector_finalize):
	(_locales_init): remove the logic related to get the name of the months
	using nl_langinfo, as it is not required anymore
	(_create_day_model)
	(_create_year_model)
	(_create_month_model)
	(_update_day_model): use of strftime in order to fill the model properly


2008-09-04  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.h
	* src/hildon-button.c (hildon_button_get_image): New method to
	retrieve the image.

2008-09-04  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c:
	(hildon_touch_selector_remove_column): Remove from the correct parent
	and also remove the list element and free it.
	Fixes: NB#88049

2008-09-04  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-time-selector.c
	(_create_hours_model): change the range on 12h ampm format in order to use
	a 12-11 range instead of previous 01-12 range
	(hildon_time_selector_set_time): change the way to select the current time
	on 12h ampm format, due the change on the range
	(hildon_time_selector_get_time): fix the hour returned on 12 ampm format
	Fixes: NB#88036

2008-09-03  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-touch-selector.c
	(hildon_date_touch_selector_get_selected): fix the selection mode check,
	in order to allow use this function on multiple row selection mode if
	the column is different that the first one
	Fixes: NB#88047

2008-09-03  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-time-selector.c: (_custom_print_func): Change the logical ids
	to "wdgt_va_12h_time" and "wdgt_va_24h_time". Fixes NB#88045.

2008-09-02  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-date-selector.h: clean some comments, now on the .c